# perlhack

./: readme.md
matrix/hack/: .anjuta_sym_db.db  Makefile.in  configure  configure.ac
matrix/hack/Debug/: Makefile  config.h  config.status  libtool
matrix/hack/Debug/po/: Makefile  Makefile.in  POTFILES
matrix/hack/Debug/src/: Makefile
matrix/hack/Debug/src/.deps/: main.Tpo
matrix/hack/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
matrix/hack/src/: Makefile.am  Makefile.in  main.cc  main.cc~
matrix/lib/: checkurl.pl
matrix/test/: drop.pl
